--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
     <!-- FOOTER -->
     <div class="footer">
       <div class="logo-info">
-        <img class="footer-img" src="images/logo copy.svg" alt="">
+        <img class="footer-img" src="images/logo-copy.svg" alt="">
         <br>
         <ul class="contact">
           <li id="location">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tenetur dolorem expedita fugiat quidem dolorum quaerat excepturi consequuntur hic neque!</li>
@@ -141,9 +141,9 @@
       <!-- COPYRIGHT -->
       <div class="copyright">
         <div class="social">
-          <a class="social-links facebook" href="#"><i class="fab fa-facebook-square fa-2x"></i></a>
-          <a class="social-links twitter" href="#"><i class="fab fa-twitter-square fa-2x"></i></a>
-          <a class="social-links instagram" href="#"><i class="fab fa-instagram-square fa-2x"></i></a>
+          <a class="social-links facebook" href="https://en-gb.facebook.com/"><i class="fab fa-facebook-square fa-2x"></i></a>
+          <a class="social-links twitter" href="https://twitter.com/?logout=1614975516807"><i class="fab fa-twitter-square fa-2x"></i></a>
+          <a class="social-links instagram" href="https://www.instagram.com/"><i class="fab fa-instagram-square fa-2x"></i></a>
         </div>
         <p>&copy; Copyright 2018 Huddle. All rights reserved.</p>
       </div>
